--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@
 }
 
 body {
+  background-color: #fff;
+  color: var(--grayish-blue);
   font-family: var(--font-family);
   font-size: 18px;
+}
+
+img {
+  max-width: 100%;
 }
